# v8go

./: .gitignore  V8InspectorClientImpl.h  backports.go  cgo.go  cgo_darwin.go  cgo_linux.go  cgo_no_win.go  cgo_win.go  client_connect.go  context.go  context_test.go  cpuprofile.go  cpuprofile_test.go  cpuprofilenode.go  cpuprofilenode_test.go  cpuprofiler.go  cpuprofiler_test.go  errors.go  errors_test.go  export_test.go  function.go  function_template.go  function_template_fetch_test.go  function_template_test.go  function_test.go  gen.bat  go.mod  go.sum  helpers_test.go  inspector.go  intl_test.go  isolate.go  isolate_test.go  json.go  json_test.go  leak_test.go  leakcheck.go  mem.go  object.go  object_template.go  (+19 more)
example/: main.go
gots/: env.go  env_path.go  js_package.go  js_script.go  js_to_go.go  readFile.go
lib/darwin_amd64/: vendor.go
lib/darwin_x64/: vendor.go
lib/linux_x86_64/: 1.txt
lib/win_x64/: v8_export.lib  vendor.go
lib/win_x86_64/: v8_export.lib  vendor.go
src/: V8InspectorClientImpl.h  v8_export.cpp
v8_export/: CMakeLists.txt  V8InspectorImpl.cpp  V8InspectorImpl.h  build.sh  build_copy_darwin_amd64.sh  build_copy_darwin_arm64.sh  build_copy_darwin_x86_64.sh  build_copy_linux_x86_64.sh  v8_export.cc  v8_export.h
v8_export_darwin/: CMakeLists.txt  V8InspectorClientImpl.h  build.sh  build_copy_darwin_amd64.sh  v8_export.h
v8_test/: CMakeLists.txt  main.c
wrapper/: v8go_wrapper.go
